@@ -58,6 +58,7 @@ Improvements
 [BEAM-1156] - SubsetOp does not copy metadata
 
 Bugs
+[BEAM-1246] - Layer-Manager does not reflect changes of mask names in Mask-Manager
 [BEAM-1241] - For certain AATSR-products, TiePointGeoCoding.getPixelPos(GeoPos, PixelPos) yields wrong results
 [BEAM-1229] - OBPG SeaWiFS L2 files can not be opened
 [BEAM-1228] - Rangefinder does not work
